# wuwa-toolkit

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
.github/workflows/: rust.yml  wuwa-downloader.yml
lib/wuwa-dl/: Cargo.toml
lib/wuwa-dl/src/: cli.rs  helper.rs  lib.rs  pool.rs  tests.rs  util.rs  utils.rs
lib/wuwa-dl/src/helper/: mod.rs  resource.rs
lib/wuwa-dl/src/json/: index.rs  mod.rs  resource.rs
lib/wuwa-macro-derive/: Cargo.toml
lib/wuwa-macro-derive/src/: lib.rs
src/: cli.rs  main.rs
src/json/: index.rs  resource.rs
wuwa-downloader/: Cargo.toml
wuwa-downloader/src/: main.rs  util.rs
wuwa-launcher/: Cargo.toml
wuwa-launcher/src/: main.rs
