[package]
name = "wuwa-downloader"
version = "0.7.0"
authors = ["Alvin Null <supdrewin@outlook.com>"]
edition = "2021"
description = "WuWa Downloader written in Rust"
repository = "https://github.com/supdrewin/wuwa-downloader/"
license = "MIT"

[dependencies]
clap.workspace = true
console.workspace = true
indicatif.workspace = true
num_cpus.workspace = true
reqwest.workspace = true
tokio.workspace = true
wuwa-dl.workspace = true
wuwa-macro-derive.workspace = true
