[package]
name = "wuwa-downloader"
description = "WuWa Downloader written in Rust"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
console.workspace = true
indicatif.workspace = true
iocraft.workspace = true
reqwest.workspace = true
smol.workspace = true
tokio.workspace = true
wuwa-dl.workspace = true
wuwa-macro-derive.workspace = true
