[package]
name = "wuwa-dl"
version = "0.6.3"
authors = ["Alvin Null <supdrewin@outlook.com>"]
edition = "2021"
description = "WuWa Download Library written in Rust"
repository = "https://github.com/supdrewin/wuwa-downloader/"
license = "MIT"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wuwa-macro-derive.workspace = true
