[package]
name = "wuwa-dl"
description = "WuWa Download Library written in Rust"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
futures-util.workspace = true
indicatif.workspace = true
md-5.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wuwa-macro-derive.workspace = true
